--- a/browser/css/svg.css
+++ b/browser/css/svg.css
@@ -765,7 +765,7 @@ line {
 /*	//////////////////////////////////////////////////////////////	*/
 .popup_container {
   z-index: 20;
-  min-width: 300px;
+  min-width: 450px;
   max-width: 80%;
   font-size: 13px;
   padding: 20px;
@@ -1226,9 +1226,13 @@ span.warningReads {
   margin-left: 14px;
 }
 .axis_select {
-  display: flex;
+  vertical-align: bottom;
+  display: inline;
   overflow: hidden;
   white-space: nowrap;
+}
+.axis_select_icon {
+  display: flex;
 }
 .axis_select select {
   background: #ffffff;
